Fix regex error on IE Update new fields for basket

--- a/liferay-plugins-sdk-6.2GA4/gadgets/portalsearch/search/css/search.css
+++ b/liferay-plugins-sdk-6.2GA4/gadgets/portalsearch/search/css/search.css
@@ -103,8 +103,8 @@ span.hilight{
     color:#666;
 }
 
-body.wait  {
-    cursor: wait;
+.wait, .wait * {
+    cursor: wait!important;
 }
 
 select[name=tableId_length] {
